# receipt_analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: config.py  init.py  main.py
app/agent/: agent.py  tools.py
app/models/: receipt.py
app/services/: init.py  llm.py  ocr.py
app/vector_store/: __init__.py  pinecone.py
